<resources>
    <string name="app_name">OpenSourceLab</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="system_setting">系统设置</string>

    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="accountNumber">账号：</string>
    <string name="password">密码：</string>

    <string name="NoNetworkConnection">无网络连接</string>

    <string name="system_name">畜牧养殖系统</string>
    <string name="save">保存</string>

    <string name="PleaseEnterTheAccessAddress">请输入访问地址</string>
    <string name="exitSystem">再按一次退出程序</string>
</resources>
